# libcdsa

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  libcdsaConfig.cmake
.github/: FUNDING.yml
docs/: array_list.md  error_handling.md  optional.md
src/: libcdsa.h  version.h
src/array_list/: array_list.c  array_list.h
src/deque/: deque.c  deque.h
src/internal/: memory.c  memory.h
src/list/: array_list.c  array_list.h  linked_list.c  linked_list.h
src/map/: hash_map.c  hash_map.h  map_entry.h  tree_map.c  tree_map.h
src/priority_queue/: priority_queue.c  priority_queue.h
src/queue/: queue.h
src/set/: hash_set.c  hash_set.h  sets.c  sets.h  tree_set.c  tree_set.h
src/stack/: stack.h
src/util/: algorithms.h  collection.h  constraints.h  error.c  error.h  errors.c  errors.h  for_each.h  functions.c  functions.h  iterator.c  iterator.h  memory.c  memory.h  non_null.h  optional.h  pair.h  sets.c  sets.h  string.c  string.h
test/: macros.h  test_functions.h  test_macros.h  test_utilities.h
test/array_list/: array_list_test.c
test/deque/: deque_test.c  deque_test.h
test/list/: array_list_test.c  array_list_test.h  linked_list_test.c  linked_list_test.h
test/map/: hash_map_test.c  hash_map_test.h  tree_map_test.c  tree_map_test.h
test/priority_queue/: priority_queue_test.c  priority_queue_test.h
test/set/: hash_set_test.c  hash_set_test.h  sets_test.c  tree_set_test.c  tree_set_test.h
test/util/: collection_test.c  constraints_test.c  errors_test.c  for_each_test.c  iterator_test.c  iterator_test.h  sets_test.c  string_test.c
